[package]
name = "rscmd"
version = "0.1.0"
authors = ["El Koulali András <deak311andris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
rustone = { path = "../rustone" }
clap = { version = "2.33", features = ["yaml", "color", "suggestions", "wrap_help"] }
atty = "0.2.14"
ansi_term = "0.12.1"
lazy_static = "1.4.0"
