[package]
name = "rscmd"
version = "0.1.0"
authors = ["El Koulali András <deak311andris@gmail.com>"]
edition = "2018"
license = "MIT"


[dependencies]
rustone = { path = "../rustone" }
clap = { version = "2.33", features = ["yaml", "color", "suggestions"] }
atty = "0.2.14"
ansi_term = "0.12.1"
lazy_static = "1.4.0"
