[package]
name = "rscmd"
version = "0.1.0"
authors = ["El Koulali András <deak311andris@gmail.com>"]
edition = "2018"
license = "MIT"


[dependencies]
rustone = { path = "../rustone" }
clap = { version = "2.33", features = ["yaml", "color", "suggestions"] }
atty = "0.2.14"
ansi_term = "0.12.1"
lazy_static = "1.4.0"
tokio = { version = "1.4.0", features = ["full"] }
futures = "0.3.13"
indicatif = "0.15.0"
reqwest = { version = "0.11.2", features = ["json", "stream"] }