[package]
name = "rshttp"
version = "0.1.0"
authors = ["El Koulali András <deak311andris@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
webpki-roots = "0.21.0"
tokio = { version = "1.4.0", features = ["full"] }
warp = "0.3.1"
rustone = { path = "../rustone" }
json = "0.12"
rand = "0.8.2"
lazy_static = "1.4.0"
openssl = "0.10.32"
reqwest = { version = "0.11.2", features = ["json", "stream"] }
