[package]
name = "rustone"
version = "0.1.0"
authors = ["El Koulali András <deak311andris@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.7"
serde_json = "1.0.60"
serde = { version = "1.0.118", features = ["derive"] }
log = "0.4"
directories = "3.0.1"
error-chain = "0.12.4"
lazy_static = "1.4.0"
reqwest = { version = "0.11.2", features = ["json"] }
tokio = { version = "1.4.0", features = ["full"] }
