[package]
name = "servcmd"
version = "0.1.0"
authors = ["El Koulali András <deak311andris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
servo = { path = "../servo" }
futures = "0.3.8"
tokio = { version = "0.2.24", features = ["macros"] }
getopts = "0.2.21"