[package]
name = "servo"
version = "0.1.0"
authors = ["El Koulali András <deak311andris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.7"
# reqwest = { version = "0.10", features = ["blocking", "json"] }
ureq = { version = "1.5.4", features = ["json"] }
serde_json = "1.0.60"
serde = { version = "1.0.118", features = ["derive"] }
log = "0.4"
directories = "3.0.1"
